@@ -31,13 +31,10 @@ $orderby = isset($_REQUEST["ob"]) && in_array($_REQUEST['ob'], $ordering) ? $_RE
 $results = array();
 $results = $releases->getBrowseRange($catarray, $offset, ITEMS_PER_PAGE, $orderby, -1, $page->userdata["categoryexclusions"], $grp);
 
-if(isset($results[0]['_totalcount'])) {
-	$browsecount = $results[0]['_totalcount'];
-}
+$browsecount = isset($results[0]['_totalcount']) ? $results[0]['_totalcount'] : 0;
 
-if (isset($browsecount)) {
-	$page->smarty->assign('pagertotalitems', $browsecount);
-}
+
+$page->smarty->assign('pagertotalitems', $browsecount);
 $page->smarty->assign('pageroffset', $offset);
 $page->smarty->assign('pageritemsperpage', ITEMS_PER_PAGE);
 $page->smarty->assign('pagerquerybase', WWW_TOP . "/browse?t=" . $category . "&amp;g=" . $grp . "&amp;ob=" . $orderby . "&amp;offset=");
