@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2017-08-29 DariusIII
+	Fix: Set pagertotalitems to 0 if there is no totalcount returned from release queries
 2017-08-18 niel
 	Mrg: PR 2513, from jangrewe - Quick and probably incomplete fix for XSS attacks.
 2017-08-09 niel
